エラー処理を変えた3種類をコミット

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 LineCount/LineCount/bin/
 LineCount/LineCount/obj/
+LineCount/LineCount2/bin/
+LineCount/LineCount2/obj/
+LineCount/LineCount3/bin/
+LineCount/LineCount3/obj/
